[package]
name = "mongodb-gridfs"
license = "MIT"
version = "0.2.2"
authors = ["Moïse Valvassori <moise.valvassori@gmail.com>"]
edition = "2018"
description = "An implementation of Mongo GridFS"
homepage = "https://github.com/djedi23/mongodb-gridfs-rs"
repository = "https://github.com/djedi23/mongodb-gridfs-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0", default-features=false, features=["bson-chrono-0_4", "bson-uuid-0_8"] }
bson = {version= "2.0.0"}
md-5 = "0.9.1"
futures = "0.3.5"
typed-builder = "0.9.0"
chrono = "0.4"

[dev-dependencies]
tokio = { version="1.9.0", features=["test-util"]}
uuid = "0.8.2"

[features]
default = ["mongodb/default"]
async-std-runtime = ["mongodb/async-std-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]
